Bug 270072 - Ctrl+F does not run KFind
Summary: Ctrl+F does not run KFind
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 274612 275100 279565 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-04 13:05 UTC by ultr
Modified: 2011-08-08 19:42 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments
Workaround for Ctrl+F Konqueror's bug (849 bytes, application/x-gzip)
2011-04-06 23:46 UTC, ultr
Details
Workaround for Ctrl+F Konqueror's bug (v2) (931 bytes, application/x-gzip)
2011-04-07 01:12 UTC, ultr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ultr 2011-04-04 13:05:13 UTC
Version:           unspecified (using KDE 4.6.1) 
OS:                Linux

Ctrl+F does not run KFind. Pretty annoying bug.

Reproducible: Always

Steps to Reproduce:
Press Ctrl+F

Actual Results:  
nothing happens

Expected Results:  
opening KFind in the current location
Comment 1 Frank Reininghaus 2011-04-05 10:46:57 UTC
Thanks for the bug report! This looks like it's due to the changes in Dolphin's find functionality. The possibility to run KFind was replaced with an internal search there. I agree that Konqueror (which uses Dolphin's code for file management) should have a way to find files.

@Peter: Probably the best way to bring Ctrl+F back to Konqueror would be to add the "run KFind" action in the DolphinPart, right?
Comment 2 Peter Penz 2011-04-05 11:58:24 UTC
@Frank: Yes, adding this to the DolphinPart would be the best way.
Comment 3 ultr 2011-04-06 23:46:40 UTC
Created attachment 58657 [details]
Workaround for Ctrl+F Konqueror's bug

Workaround for Ctrl+F Konqueror's bug.
It uses KHotkeys and DBus ("qdbus" command required).
Comment 4 ultr 2011-04-07 01:12:29 UTC
Created attachment 58658 [details]
Workaround for Ctrl+F Konqueror's bug (v2)

Updated:
Workaround for Ctrl+F Konqueror's bug.
It uses KHotkeys and DBus ("qdbus" command required).
Comment 5 Peter Penz 2011-04-07 08:54:02 UTC
Thanks ultr for the patch, probably David can comment on this.
Comment 6 ultr 2011-04-07 13:12:49 UTC
This is not a patch, but merely a hack for users, who cannot use Konqueror without this ;)
Comment 7 Peter Penz 2011-04-07 13:25:13 UTC
@ultr:  You're right of course - sorry, I did not check the attachment and thought it was an alternative approach without touching the DolphinPart ;-)

Will have a look on this at the weekend hopefully.
Comment 8 Peter Penz 2011-04-10 18:30:43 UTC
Git commit 5b94c7d551424c281add233acdc1c378c9ed0f51 by Peter Penz.
Committed on 10/04/2011 at 18:32.
Pushed by ppenz into branch 'master'.

Readd KFind shortcut for the Dolphin KPart

When the searching has been integrated into Dolphin the "Find File..."
entry had been removed from the Tools menu. Readd it into the Dolphin
KPart so that it is still available for Konqueror.

BUG: 270072
FIXED-IN: 4.7.0

M  +12   -1    dolphin/src/dolphinpart.cpp     
M  +5    -0    dolphin/src/dolphinpart.h     

http://commits.kde.org/kde-baseapps/5b94c7d551424c281add233acdc1c378c9ed0f51
Comment 9 H.H. 2011-04-22 23:50:53 UTC
oh, thats nice. does that mean, I can configure to run kfind also from dolphin in kde-4.7? and also add a toolbar button for that manually? would it be possible to backport to 4.6?
Comment 10 Peter Penz 2011-04-23 07:46:30 UTC
> does that mean, I can configure to run kfind
> also from dolphin in kde-4.7?

No, in Dolphin only the integrated find will be available. It would be possible though that someone creates a service menu for KFind, but in this case it would be only available in the context-menu and not in the menubar/toolbar.

> would it be possible to backport to 4.6?

Sadly no, as a new translation-string had to be introduced.
Comment 11 Frank Reininghaus 2011-05-31 17:05:08 UTC
*** Bug 274612 has been marked as a duplicate of this bug. ***
Comment 12 Burkhard Lück 2011-06-08 08:23:46 UTC
*** Bug 275100 has been marked as a duplicate of this bug. ***
Comment 13 Frank Reininghaus 2011-08-08 19:42:35 UTC
*** Bug 279565 has been marked as a duplicate of this bug. ***