Readd KFind shortcut for the Dolphin KPart

When the searching has been integrated into Dolphin the "Find File..."
entry had been removed from the Tools menu. Readd it into the Dolphin
KPart so that it is still available for Konqueror.

BUG: 270072
FIXED-IN: 4.7.0